# gtkcal

./: README.md  meson.build  meson.options  otb-indent.cfg
data/: GtkCal.cmb  gtkcal.gresource.xml  style.css
data/ui/: gcal-event-widget.ui  gcal-month-cell.ui  gcal-month-popover.ui  gcal-month-view.ui  gtkcal.cmb
docs/: meson.build
docs/devhelp/: meson.build
docs/gi-docgen/: meson.build
docs/html/: meson.build
po/: POTFILES.in  meson.build
src/: GtkCalMonthPopover.vala  GtkCalTimer.vala  config.vapi  date-time-utils.vala  enums.vala  meson.build  utils.vala
src/gui/: GtkCalEvent.vala  GtkCalEventWidget.vala  GtkCalMonthPopover.vala  GtkCalOverflowBin.vala  GtkCalOverflowBinLayout.vala  GtkCalRange.vala  GtkCalTimelineSubscriber.vala  meson.build
src/gui/views/: GtkCalMonthCell.vala  GtkCalMonthView.vala  GtkCalMonthViewRow.vala  GtkCalView.vala  meson.build
src/weather/: GtkCalWeatherInfo.vala  GtkCalWeatherService.vala  meson.build
test/: TestMonthViewRow.vala  app.vala  meson.build  test.vala  weather.vala
