custom_target('html-doc',
  input: gtkcal_sources,
  output: 'html',
  command: [ valadoc,
    '--doclet=html',
    '--force',
    '--package-name=@0@'.format(meson.project_name()),
    '--package-version=@0@'.format(meson.project_version()),
    '--pkg=glib-2.0',
    '--pkg=gio-2.0',
    '--pkg=gio-unix-2.0',
    '--pkg=gtk4',
    '--pkg=gee-0.8',
    '--pkg=libadwaita-1',
    '--pkg=libical-glib',
    '--pkg=posix',
    '--directory=@OUTDIR@',
    gtkcal_sources,
  ],
  build_by_default: false,
)
